Overflowing correctly

--- a/styles/scss/partials/_module.scss
+++ b/styles/scss/partials/_module.scss
@@ -36,6 +36,7 @@
     right: 0;
     width: 290px;
     background-color: white;
+    overflow: scroll;
   }
 
   @media screen and (max-width: 1024px) {
